--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="fragment_search_name">姓名</string>
+
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
