--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,9 @@
 
     <string name="fragment_search_content">搜索条件</string>
 
-    <string name="action_example">Example action</string>
-
-    <string name="action_settings">Settings</string>
+    <string name="action_search">搜索</string>
+    <string name="action_new">新建</string>
+    <string name="action_settings">设置</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
