--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="title_sectionContacts">联系人目录</string>
     <string name="title_sectionSearch">搜索联系人</string>
+    <string name="title_sectionAdd">添加联系人</string>
     <string name="title_section3">Section 3</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
