--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="fragment_search_content">搜索条件</string>
+    <string name="fragment_search_hint">搜索条件</string>
+
+    <string name="fragment_add_name">姓名</string>
+    <string name="fragment_add_phone_number">号码</string>
+    <string name="fragment_add_tag">标签</string>
 
     <string name="action_search">搜索</string>
     <string name="action_new">新建</string>
