--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
         <item>@string/title_section3</item>
     </string-array>
 
-    <string name="snackbar_text">读取数据中，请稍候。</string>
+    <string name="snackbar_text_loading">读取数据中，请稍候。</string>
+    <string name="snackbar_text_loaded">读取数据完成。</string>
 
     <string name="fragment_search_content">搜索条件</string>
     <string name="fragment_search_hint">搜索条件</string>
